--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -1,18 +1,19 @@
 nav {
-	background-color: #242424;
+	height: 50px;
+	background-color: #1B1B1B;
 }
 
 nav .menu {
 	display: inline-flex;
     text-align: center;
-    background: #242424;
-    height: 40px;
+    background: #1B1B1B;
+    height: 50px;
     width: 100%;
     z-index: 1;
 }
 
 nav .menu ul {
-	background-color: #242424;
+	background-color: #1B1B1B;
 	display: inline-flex;
     width: 100%;
     list-style: none;
@@ -22,7 +23,7 @@ nav .menu ul {
 }
 
 nav .menu ul li {
-	background-color: #242424;
+	background-color: #1B1B1B;
 	font-size: 24px;
 	width: 200px;
     height: 50px;
@@ -33,10 +34,10 @@ nav .menu ul li a {
 	text-decoration: none;
     color: whitesmoke;
     float: left;
-    margin: 0px 0px;
+    margin-left: 5px;
 	padding: 12px 8px;
 	width: 200px;
-	height: 53px;
+	height: 50px;
 	text-align: center; 
 	box-sizing: border-box;
     border-radius: 0px;
