--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -25,7 +25,7 @@
 	transition: 0.2s;
 }
 
-button {
+.showContainer button {
 	margin-left: 50px;
 	margin-top: 40px;
 	color: gold;
@@ -38,7 +38,7 @@ button {
 	transition: 0.2s;
 }
 
-button:hover {
+.showContainer button:hover {
 	transition: 0.2s;
 	background-color: red;
 }
