--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,35 @@
-<h2>Sign up</h2>
+<div class="signupContainer">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <h2 class="signupText">Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+
+    <div class="signupField">
+      <%= f.label :email,class:"textLabel" %><br />
+      <%= f.email_field :email,class:"signupFill", autofocus: true, autocomplete: "email" %>
+    </div>
+
+    <div class="signupField">
+      <%= f.label :password,class:"textLabel" %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password,class:"signupFill", autocomplete: "new-password" %>
+    </div>
+
+    <div class="signupField">
+      <%= f.label :password_confirmation,class:"textLabel" %><br />
+      <%= f.password_field :password_confirmation,class:"signupFill", autocomplete: "new-password" %>
+    </div>
+
+    <div class="signupActions">
+      <%= f.submit "Sign up",class:"signupButton" %>
+    </div>
+  <% end %>
+
+  <div class="signupLinks">
+    <%= render "devise/shared/links" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
