--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,5 +1,6 @@
 * {
 	background-color: black;
+	font-family: 'Bebas Neue', cursive;;
 }
 
 .iContainer {
@@ -61,12 +62,12 @@
 .totalContainer {
 	float: left;
 	position: relative;
-	margin-top: 70px;
+	margin-top: 75px;
 	margin-bottom: 20px;
-	margin-left: auto;
+	margin-left: 120px;
 	margin-right: auto;
 	border-radius: 10px;
-	height: 100px;
+	height: 130px;
 	width: 200px;
 	background-color: #4BFFA5;
 }
@@ -91,7 +92,7 @@
 	border-radius: 10px;
 	background-color: #4BFFA5;
 	height: 50px;
-	width: 800px;
+	width: 600px;
 	position: relative;
 	margin-top: 20px;
 	margin-bottom: 20px;
