--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -13,7 +13,7 @@
         </li>
 
         <li>
-          <%= link_to "Add Transactions", new_transaction_path %>
+          <%= link_to "Add Transaction", new_transaction_path %>
         </li>
 
           <li>
