--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -5,13 +5,13 @@
   </p>
 
   <p>
-    <strong>Amount:</strong>
+    <strong>Expense:</strong>
     <%= transaction.amount %>
   </p>
 
   <p>
-    <strong>Currency:</strong>
-    <%= transaction.currency %>
+    <strong>Income:</strong>
+    <%= transaction.income %>
   </p>
 
   <p>
@@ -22,6 +22,11 @@
   <p>
     <strong>Date:</strong>
     <%= transaction.date %>
+  </p>
+
+  <p>
+    <strong>Account:</strong>
+    <%= transaction.account %>
   </p>
 
 </div>
